NetworkService: Fix WebViewTest.ClearDataCache

This patch does 3 things to fix the test:
1. Register listeners before loading the actual guest page. See bug for
   more background.
2. Add |was_fetched_via_cache| to |ResourceResponseInfo|.
3. Call |NetworkContext::ClearHttpCache()| in
   |WebViewGuest::ClearData()| when Network Service was enabled. We
   cannot use |BrowsingDataRemover| because it doesn't support
   non-default |StoragePartition|.

Bug: 878060
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: I5f0ea8e62ee8f44944428cfb041f9d4e427bd67c
Reviewed-on: https://chromium-review.googlesource.com/1195596
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: Ken Rockot <rockot@chromium.org>
Reviewed-by: Clark DuVall <cduvall@chromium.org>
Commit-Queue: Chong Zhang <chongz@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587753}
Former-commit-id: b94164ad9f4091897f33e3ddbdca70097c82181c