extensions/browser/api/web_request/web_request_info.cc
@@ -350,11 +350,7 @@ void WebRequestInfo::AddResponseInfoFromResourceResponse(
   if (response_headers)
     response_code = response_headers->response_code();
   response_ip = response.socket_address.host();
-
-  // TODO(https://crbug.com/721414): We have no apparent source for this
-  // information yet in the Network Service case. Should indicate whether or not
-  // the response data came from cache.
-  response_from_cache = false;
+  response_from_cache = response.was_fetched_via_cache;
 }
 
 void WebRequestInfo::InitializeWebViewAndFrameData(
